change logo & icon

--- a/referencje.html
+++ b/referencje.html
@@ -22,7 +22,7 @@
 <body>
     <header class="headerLarge12">
         <nav class="nav">
-            <a href="index.html"><img class="imglogo" src="./logo/Metroprojekt_PL_v.2.0_PDST.svg" alt=""></a>
+            <a href="index.html"><img class="imglogo" src="./logo/METROPROJEKT_Logo_NEW.png" alt="Logo Metroprojekt"></a>
             <div class="menuButton">
                 <div class="menuButton__bars">
                     <div class="bar1"></div>
