--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
             </ul>
         </nav>
         <div>
-            <h1 class="h1OverImg"><span>Świadczymy kompleksowe</span><br><span> usługi projektowe od 1951 roku</span>
+            <h1 class="h1OverImg fade-animation01"><span>Świadczymy kompleksowe</span><br><span> usługi projektowe od 1951 roku</span>
             </h1>
-            <a class="button03" href="#onas">Dowiedz się więcej >></a>
+            <a class="button03 zoom-animation" href="#onas">Dowiedz się więcej >></a>
         </div>
     </header>
 
