--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Biuro Projektów Metroprojekt sp. z o.o. jest firmą z 70-letnią tradycją w projektowaniu obiektów kubaturowych, infrastruktury transportowej, instalacji i systemów kolejowych oraz metra. Świadczymy usługi projektowe dla inwestorów, wykonawców budowlanych oraz współpracujemy z innymi biurami projektowymi.">
+    <meta name="description" content="Metroprojekt sp. z o.o. jest firmą z 70-letnią tradycją w projektowaniu obiektów kubaturowych, infrastruktury transportowej, instalacji i systemów kolejowych oraz metra. Świadczymy usługi projektowe dla inwestorów, wykonawców budowlanych oraz współpracujemy z innymi biurami projektowymi.">
     <meta name="keywords" content="metroprojekt, metro, srk, sterowanie ruchem kolejowym">
     <!-- Page Icon -->
     <link rel="icon" href="./img/icon.jpg">
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <!-- Title -->
-    <title>Biuro Projektów Metroprojekt sp. z o.o.</title>
+    <title>Metroprojekt sp. z o.o.</title>
 </head>
 
 <body>
@@ -124,7 +124,7 @@
         <div class="text_Img_Section">
             <div class="text_Section text_margin_Section">
                 <p class="text_Section_p">
-                    Biuro Projektów "Metroprojekt" sp. z o.o. jest firmą z 70-letnią tradycją w projektowaniu obiektów kubaturowych, infrastruktury transportowej, instalacji i systemów kolejowych oraz metra. Świadczymy usługi projektowe dla inwestorów, wykonawców budowlanych
+                    "Metroprojekt" sp. z o.o. jest firmą z 70-letnią tradycją w projektowaniu obiektów kubaturowych, infrastruktury transportowej, instalacji i systemów kolejowych oraz metra. Świadczymy usługi projektowe dla inwestorów, wykonawców budowlanych
                     oraz współpracujemy z innymi biurami projektowymi.
                 </p>
                 <p class="text_Section_p">
@@ -214,7 +214,7 @@
                     i rozwoju systemu komunikacji publicznej przewidywano budowę metra w Warszawie.
                 </p>
                 <p>
-                    14 grudnia 1950 roku Uchwałą Rządu powołano do życia Biuro Projektów Metroprojekt. Wiązało się to z podjętą również w 1950 r. decyzją o budowie metra w Warszawie. Metroprojekt został powołany dla obsługi projektowej budowy metra w Warszawie. Od tego momentu
+                    14 grudnia 1950 roku Uchwałą Rządu powołano do życia Metroprojekt. Wiązało się to z podjętą również w 1950 r. decyzją o budowie metra w Warszawie. Metroprojekt został powołany dla obsługi projektowej budowy metra w Warszawie. Od tego momentu
                     liczy się historia Biura Projektów Metroprojekt.
                 </p>
                 <p>
@@ -231,7 +231,7 @@
                     Prawie cała I linia metra tzn. 16 z 21 stacji i 19 tuneli z 21 zrealizowana jest według projektów Biura Projektów Metroprojekt, a tylko 5 stacji i 2 tunele, wykonały inne zespoły projektowe.
                 </p>
                 <p>
-                    W dniu 01.07.1991 r. Metroprojekt - biuro państwowe przekształciło się w Biuro Projektów "Metroprojekt" sp. z o.o., jako Spółka kontynuujemy działalność przedsiębiorstwa państwowego.
+                    W dniu 01.07.1991 r. Metroprojekt - biuro państwowe przekształciło się w "Metroprojekt" sp. z o.o., jako Spółka kontynuujemy działalność przedsiębiorstwa państwowego.
                 </p>
             </div>
         </div>
@@ -409,12 +409,12 @@
             </div>
             <div class="footerFlexSection__Two">
                 <p class="footerp">
-                    <strong>Biuro Projektów "Metroprojekt" sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
+                    <strong>"Metroprojekt" sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
                 </p>
             </div>
         </div>
         <div class="footerCopyright">
-            Copyright © <span class="footerYear"></span> - Biuro Projektów "Metroprojekt" sp. z o.o.
+            Copyright © <span class="footerYear"></span> - "Metroprojekt" sp. z o.o.
         </div>
     </footer>
 
