--- a/konstrukcje-budowlane-i-inzynierskie.html
+++ b/konstrukcje-budowlane-i-inzynierskie.html
@@ -122,7 +122,7 @@
             </div>
         </div>
         <div class="footerCopyright">
-            Copyright © <span class="footerYear"></span> - "Metroprojekt" sp. z o.o.
+            Copyright © <span class="footerYear"></span> "Metroprojekt" sp. z o.o.
         </div>
     </footer>
 
