--- a/sieci-i-instalacje-wodnokanalizacyjne.html
+++ b/sieci-i-instalacje-wodnokanalizacyjne.html
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="footerCopyright">
-            Copyright © <span class="footerYear"></span> - "Metroprojekt" sp. z o.o.
+            Copyright © <span class="footerYear"></span> "Metroprojekt" sp. z o.o.
         </div>
     </footer>
 
