--- a/uklady-komunikacyjne.html
+++ b/uklady-komunikacyjne.html
@@ -123,7 +123,7 @@
             </div>
         </div>
         <div class="footerCopyright">
-            Copyright © <span class="footerYear"></span> - "Metroprojekt" sp. z o.o.
+            Copyright © <span class="footerYear"></span> "Metroprojekt" sp. z o.o.
         </div>
     </footer>
 
