change/update content

--- a/kontakt.html
+++ b/kontakt.html
@@ -101,7 +101,7 @@
     <!-- Section 01 -->
     <section class="whiteSection">
         <p class="contactp">
-            <strong>"Metroprojekt" sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
+            <strong>Metroprojekt sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
             <br><br>
             <strong>Dane rejestrowe:</strong><br>NIP: 526-020-34-93<br>Regon: 012523131<br>KRS: 0000060995<br><br>Sąd rejonowy dla m.st. Warszawy w Warszawie<br>XIV Wydział Gospodarczy Krajowego Rejestru Sądowego<br>Kapitał zakładowy: 2 244 000,00 PLN
         </p>
@@ -121,12 +121,12 @@
             </div>
             <div class="footerFlexSection__Two">
                 <p class="footerp">
-                    <strong>"Metroprojekt" sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
+                    <strong>Metroprojekt sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
                 </p>
             </div>
         </div>
         <div class="footerCopyright">
-            Copyright © <span class="footerYear"></span> "Metroprojekt" sp. z o.o.
+            Copyright © <span class="footerYear"></span> Metroprojekt sp. z o.o.
         </div>
     </footer>
 
