--- a/dolacz-do-nas.html
+++ b/dolacz-do-nas.html
@@ -103,7 +103,7 @@
     <!-- Section 01 -->
     <section class="whiteSection">
         <p>
-            "Metroprojekt" sp. z o.o. powiększa swój zespół projektantów, asystentów i specjalistów w różnych branżach. Jeśli poszukujesz ciekawej pracy, ambitnych wyzwań i projektów w obszarach najnowocześniejszych technologii - dołącz do naszego
+            Metroprojekt sp. z o.o. powiększa swój zespół projektantów, asystentów i specjalistów w różnych branżach. Jeśli poszukujesz ciekawej pracy, ambitnych wyzwań i projektów w obszarach najnowocześniejszych technologii - dołącz do naszego
             zespołu! Oferujemy stabilne warunki pracy, możliwość rozwoju i zdobywania unikalnego doświadczenia w wielobranżowym biurze projektowym. Zależy nam na wytrwałości, konsekwencji i zespołowym działaniu w dążeniu do wyznaczonych przez nas celów.
         </p>
         <p>
@@ -123,12 +123,12 @@
             </div>
             <div class="footerFlexSection__Two">
                 <p class="footerp">
-                    <strong>"Metroprojekt" sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
+                    <strong>Metroprojekt sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
                 </p>
             </div>
         </div>
         <div class="footerCopyright">
-            Copyright © <span class="footerYear"></span> "Metroprojekt" sp. z o.o.
+            Copyright © <span class="footerYear"></span> Metroprojekt sp. z o.o.
         </div>
     </footer>
 
