--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="text_Img_Section">
             <div class="text_Section text_margin_Section">
                 <p class="text_Section_p">
-                    "Metroprojekt" sp. z o.o. jest firmą z 70-letnią tradycją w projektowaniu obiektów kubaturowych, infrastruktury transportowej, instalacji i systemów kolejowych oraz metra. Świadczymy usługi projektowe dla inwestorów, wykonawców budowlanych
+                    Metroprojekt sp. z o.o. jest firmą z 70-letnią tradycją w projektowaniu obiektów kubaturowych, infrastruktury transportowej, instalacji i systemów kolejowych oraz metra. Świadczymy usługi projektowe dla inwestorów, wykonawców budowlanych
                     oraz współpracujemy z innymi biurami projektowymi.
                 </p>
                 <p class="text_Section_p">
@@ -231,7 +231,7 @@
                     Prawie cała I linia metra tzn. 16 z 21 stacji i 19 tuneli z 21 zrealizowana jest według projektów Biura Projektów Metroprojekt, a tylko 5 stacji i 2 tunele, wykonały inne zespoły projektowe.
                 </p>
                 <p>
-                    W dniu 01.07.1991 r. Metroprojekt - biuro państwowe przekształciło się w "Metroprojekt" sp. z o.o., jako Spółka kontynuujemy działalność przedsiębiorstwa państwowego.
+                    W dniu 01.07.1991 r. Metroprojekt - biuro państwowe przekształciło się w Metroprojekt sp. z o.o., jako Spółka kontynuujemy działalność przedsiębiorstwa państwowego.
                 </p>
             </div>
         </div>
@@ -409,12 +409,12 @@
             </div>
             <div class="footerFlexSection__Two">
                 <p class="footerp">
-                    <strong>"Metroprojekt" sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
+                    <strong>Metroprojekt sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
                 </p>
             </div>
         </div>
         <div class="footerCopyright">
-            Copyright © <span class="footerYear"></span> "Metroprojekt" sp. z o.o.
+            Copyright © <span class="footerYear"></span> Metroprojekt sp. z o.o.
         </div>
     </footer>
 
