--- a/mozliwosci-wspolpracy.html
+++ b/mozliwosci-wspolpracy.html
@@ -103,7 +103,7 @@
     <!-- Section 01 -->
     <section class="whiteSection">
         <p>
-            "Metroprojekt" sp. z o.o. jest otwarte na szeroką współpracę we wszystkich obszarach prowadzonej przez siebie działalności. W szczególności zachęcamy do wspólnych działań w zakresie:<br><br>
+            Metroprojekt sp. z o.o. jest otwarte na szeroką współpracę we wszystkich obszarach prowadzonej przez siebie działalności. W szczególności zachęcamy do wspólnych działań w zakresie:<br><br>
             <span class="lispan">projektowania nowych typów urządzeń i systemów
                 sterowania ruchem i zarządzania infrastrukturą</span><br> <span class="lispan">projektowania obiektów
                 nietypowych, rozwiązań specjalizowanych, cyfrowych systemów sterowania i kontroli</span><br> <span class="lispan">testowania urządzeń i systemów sterowania ruchem</span><br> <span class="lispan">analiz
@@ -150,12 +150,12 @@
             </div>
             <div class="footerFlexSection__Two">
                 <p class="footerp">
-                    <strong>"Metroprojekt" sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
+                    <strong>Metroprojekt sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
                 </p>
             </div>
         </div>
         <div class="footerCopyright">
-            Copyright © <span class="footerYear"></span> "Metroprojekt" sp. z o.o.
+            Copyright © <span class="footerYear"></span> Metroprojekt sp. z o.o.
         </div>
     </footer>
 
