--- a/sieci-i-instalacje-wodnokanalizacyjne.html
+++ b/sieci-i-instalacje-wodnokanalizacyjne.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <!-- Title -->
-    <title>Metroprojekt sp. z o.o.</title>
+    <title>Metroprojekt sp. z o.o. | Sieci i instalacje wodno-kanalizacyjne</title>
 </head>
 
 <body>
