--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div>
             <h1 class="h1OverImg fade-animation01"><span>Świadczymy kompleksowe</span><br><span> usługi projektowe od 1951 roku</span>
             </h1>
-            <a class="button03 zoom-animation" href="#onas">Dowiedz się więcej >></a>
+            <a class="button03 fade-animation02" href="#onas">Dowiedz się więcej >></a>
         </div>
     </header>
 
