--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     Prawie cała I linia metra tzn. 16 z 21 stacji i 19 tuneli z 21 zrealizowana jest według projektów Biura Projektów Metroprojekt, a tylko 5 stacji i 2 tunele, wykonały inne zespoły projektowe.
                 </p>
                 <p>
-                    W dniu 01.07.1991 r. Metroprojekt - biuro państwowe przekształciło się w Metroprojekt sp. z o.o., jako Spółka kontynuujemy działalność przedsiębiorstwa państwowego.
+                    W dniu 01.07.1991 r. Metroprojekt - biuro państwowe przekształciło się w Biuro Projektów "Metroprojekt" sp. z o.o. W dniu 01.09.2023 nastąpiła zmiana nazwy spółki na Metroprojekt Sp. z o. o. Jako Spółka kontynuujemy działalność przedsiębiorstwa państwowego.
                 </p>
             </div>
         </div>
