add a new job offer to description

--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Metroprojekt sp. z o.o. jest firmą z 70-letnią tradycją w projektowaniu obiektów kubaturowych, infrastruktury transportowej, instalacji i systemów kolejowych oraz metra. Świadczymy usługi projektowe dla inwestorów, wykonawców budowlanych oraz współpracujemy z innymi biurami projektowymi.">
-    <meta name="keywords" content="metroprojekt, metro, srk, sterowanie ruchem kolejowym">
+    <meta name="description" content="Metroprojekt sp. z o.o. - oferty pracy">
+    <meta name="keywords" content="metroprojekt, metro, srk, sterowanie ruchem kolejowym, oferty pracy Metroprojekt">
     <!-- Page Icon -->
     <link rel="icon" href="./img/icon.jpg">
     <!-- External CSS -->
@@ -105,6 +105,17 @@
     <section class="whiteSection" id="firstId">
         <h1 class="h1left">Aktualne oferty pracy</h1>
         <div class="text_margin_Section">
+            <div class="career_section">
+                <div class="career-img">
+                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="career-desc">
+                    <p>Projektant / asystent projektanta branży elektrycznej (elektroenergetyka nietrakcyjna) [Warszawa]</p>
+                </div>
+                <div class="career-btn">
+                    <a class="button02 job-btn" target="_blank" href="./pdf/20230903_Ogloszenie_o_prace_Projektant_asystent_ENE__PW01.pdf">Zobacz ofertę</a>
+                </div>
+            </div>
             <div class="career_section">
                 <div class="career-img">
                     <img src="./img/20210326_BPM-69.png" alt="" width="140px">
