rollback name changes

--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Metroprojekt sp. z o.o. - oferty pracy">
+    <meta name="description" content="Biuro Projektów "Metroprojekt" sp. z o.o. - oferty pracy">
     <meta name="keywords" content="metroprojekt, metro, srk, sterowanie ruchem kolejowym, oferty pracy Metroprojekt">
     <!-- Page Icon -->
     <link rel="icon" href="./img/icon.jpg">
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
     <!-- Title -->
-    <title>Metroprojekt sp. z o.o. | Oferty pracy</title>
+    <title>Biuro Projektów "Metroprojekt" sp. z o.o. | Oferty pracy</title>
 </head>
 
 <body>
@@ -171,12 +171,12 @@
             </div>
             <div class="footerFlexSection__Two">
                 <p class="footerp">
-                    <strong>Metroprojekt sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
+                    <strong>Biuro Projektów "Metroprojekt" sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
                 </p>
             </div>
         </div>
         <div class="footerCopyright">
-            Copyright © <span class="footerYear"></span> Metroprojekt sp. z o.o.
+            Copyright © <span class="footerYear"></span> Biuro Projektów "Metroprojekt" sp. z o.o.
         </div>
     </footer>
 
