change companys title

--- a/inwestorstwo-zastepcze-ekspertyzy.html
+++ b/inwestorstwo-zastepcze-ekspertyzy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Biuro Projektów "Metroprojekt" sp. z o.o. jest firmą z 70-letnią tradycją w projektowaniu obiektów kubaturowych, infrastruktury transportowej, instalacji i systemów kolejowych oraz metra. Świadczymy usługi projektowe dla inwestorów, wykonawców budowlanych oraz współpracujemy z innymi biurami projektowymi.">
+    <meta name="description" content="Metroprojekt sp. z o.o. jest firmą z 70-letnią tradycją w projektowaniu obiektów kubaturowych, infrastruktury transportowej, instalacji i systemów kolejowych oraz metra. Świadczymy usługi projektowe dla inwestorów, wykonawców budowlanych oraz współpracujemy z innymi biurami projektowymi.">
     <meta name="keywords" content="metroprojekt, metro, srk, sterowanie ruchem kolejowym">
     <!-- Page Icon -->
     <link rel="icon" href="./img/icon.jpg">
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <!-- Title -->
-    <title>Biuro Projektów "Metroprojekt" sp. z o.o. | Inwestorstwo zastępcze, ekspertyzy i opinie techniczne</title>
+    <title>Metroprojekt sp. z o.o. | Inwestorstwo zastępcze, ekspertyzy i opinie techniczne</title>
 </head>
 
 <body>
@@ -123,12 +123,12 @@
             </div>
             <div class="footerFlexSection__Two">
                 <p class="footerp">
-                    <strong>Biuro Projektów "Metroprojekt" sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
+                    <strong>Metroprojekt sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
                 </p>
             </div>
         </div>
         <div class="footerCopyright">
-            Copyright © <span class="footerYear"></span> Biuro Projektów "Metroprojekt" sp. z o.o.
+            Copyright © <span class="footerYear"></span> Metroprojekt sp. z o.o.
         </div>
     </footer>
 
