--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -110,6 +110,17 @@
                     <img src="./img/20210326_BPM-69.png" alt="" width="140px">
                 </div>
                 <div class="career-desc">
+                    <p>Koordynator projektów kolejowych [Warszawa]</p>
+                </div>
+                <div class="career-btn">
+                    <a class="button02 job-btn" target="_blank" href="./pdf/20230926_Ogloszenie_o_prace_Koordynator_projektow_kolejowych__PW01.pdf">Zobacz ofertę</a>
+                </div>
+            </div>
+            <div class="career_section">
+                <div class="career-img">
+                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="career-desc">
                     <p>Projektant / asystent projektanta branży elektrycznej (elektroenergetyka nietrakcyjna) [Warszawa]</p>
                 </div>
                 <div class="career-btn">
