add a new job offer

--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -110,6 +110,17 @@
                     <img src="./img/20210326_BPM-69.png" alt="" width="140px">
                 </div>
                 <div class="career-desc">
+                    <p>Projektant / Asystent projektanta branży teletechnicznej [Katowice]</p>
+                </div>
+                <div class="career-btn">
+                    <a class="button02 job-btn" target="_blank" href="./pdf/20231129_Ogloszenie_o_prace_Projektant_asystent_teletechnika_Katowice__PW01.pdf">Zobacz ofertę</a>
+                </div>
+            </div>
+            <div class="career_section">
+                <div class="career-img">
+                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="career-desc">
                     <p>Koordynator projektów kolejowych [Warszawa]</p>
                 </div>
                 <div class="career-btn">
@@ -147,17 +158,6 @@
                 </div>
                 <div class="career-btn">
                     <a class="button02 job-btn" target="_blank" href="./pdf/20230428_Ogloszenie_o_prace_Asystent_srk_Katowice_Warszawa_PW01.pdf">Zobacz ofertę</a>
-                </div>
-            </div>
-            <div class="career_section">
-                <div class="career-img">
-                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
-                </div>
-                <div class="career-desc">
-                    <p>Asystent projektanta branży teletechnicznej [Katowice]</p>
-                </div>
-                <div class="career-btn">
-                    <a class="button02 job-btn" target="_blank" href="./pdf/20230428_Ogloszenie_o_prace_Asystent_teletechnika_Katowice__PW01.pdf">Zobacz ofertę</a>
                 </div>
             </div>
             <div class="career_section">
