add a new job offers

--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -110,6 +110,28 @@
                     <img src="./img/20210326_BPM-69.png" alt="" width="140px">
                 </div>
                 <div class="career-desc">
+                    <p>Projektant instalacji HVAC [Warszawa]</p>
+                </div>
+                <div class="career-btn">
+                    <a class="button02 job-btn" target="_blank" href="./pdf/20240301_Ogloszenie_o_prace_Projektant_HVAC_Warszawa.pdf">Zobacz ofertę</a>
+                </div>
+            </div>
+            <div class="career_section">
+                <div class="career-img">
+                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="career-desc">
+                    <p>Asystent projektanta instalacji HVAC [Warszawa]</p>
+                </div>
+                <div class="career-btn">
+                    <a class="button02 job-btn" target="_blank" href="./pdf/20240301_Ogloszenie_o_prace_Asystent_HVAC_Warszawa.pdf">Zobacz ofertę</a>
+                </div>
+            </div>
+            <div class="career_section">
+                <div class="career-img">
+                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="career-desc">
                     <p>Projektant / Asystent projektanta branży teletechnicznej [Katowice]</p>
                 </div>
                 <div class="career-btn">
@@ -136,17 +158,6 @@
                 </div>
                 <div class="career-btn">
                     <a class="button02 job-btn" target="_blank" href="./pdf/20230903_Ogloszenie_o_prace_Projektant_asystent_ENE__PW01.pdf">Zobacz ofertę</a>
-                </div>
-            </div>
-            <div class="career_section">
-                <div class="career-img">
-                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
-                </div>
-                <div class="career-desc">
-                    <p>Asystent projektanta instalacji HVAC [Warszawa]</p>
-                </div>
-                <div class="career-btn">
-                    <a class="button02 job-btn" target="_blank" href="./pdf/20230724_Ogloszenie_o_prace_Asystent_HVAC__PW01.pdf">Zobacz ofertę</a>
                 </div>
             </div>
             <div class="career_section">
