add a new job offer

--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -110,6 +110,17 @@
                     <img src="./img/20210326_BPM-69.png" alt="" width="140px">
                 </div>
                 <div class="career-desc">
+                    <p>Projektant urządzeń sterowania ruchem kolejowym [Warszawa, Radom, Katowice]</p>
+                </div>
+                <div class="career-btn">
+                    <a class="button02 job-btn" target="_blank" href="./pdf/20240510_Ogloszenie_o_prace_Projektant_srk_Warszawa_Radom_Katowice_PW01.pdf">Zobacz ofertę</a>
+                </div>
+            </div>
+            <div class="career_section">
+                <div class="career-img">
+                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="career-desc">
                     <p>Projektant instalacji HVAC [Warszawa]</p>
                 </div>
                 <div class="career-btn">
