add new job offers

--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -110,6 +110,39 @@
                     <img src="./img/20210326_BPM-69.png" alt="" width="140px">
                 </div>
                 <div class="career-desc">
+                    <p>Projektant [Warszawa]</p>
+                </div>
+                <div class="career-btn">
+                    <a class="button02 job-btn" target="_blank" href="./pdf/20240711_Ogloszenie_o_prace_Projektant_BPM.pdf">Zobacz ofertę</a>
+                </div>
+            </div>
+            <div class="career_section">
+                <div class="career-img">
+                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="career-desc">
+                    <p>Projektant/Starszy Asystent Projektanta [Warszawa]</p>
+                </div>
+                <div class="career-btn">
+                    <a class="button02 job-btn" target="_blank" href="./pdf/20240711_Ogloszenie_o_prace_Projektant_Starszy Asystent Projektanta_BPM.pdf">Zobacz ofertę</a>
+                </div>
+            </div>
+            <div class="career_section">
+                <div class="career-img">
+                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="career-desc">
+                    <p>Starszy Specjalista ds. administracyjnej obsługi projektu [Warszawa]</p>
+                </div>
+                <div class="career-btn">
+                    <a class="button02 job-btn" target="_blank" href="./pdf/20240711_Ogloszenie_o_prace_Starszy Specjalista ds. administracyjnej_obslugi_projektu_BPM.pdf">Zobacz ofertę</a>
+                </div>
+            </div>
+            <div class="career_section">
+                <div class="career-img">
+                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="career-desc">
                     <p>Projektant urządzeń sterowania ruchem kolejowym [Warszawa, Radom, Katowice]</p>
                 </div>
                 <div class="career-btn">
