--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -110,7 +110,7 @@
                     <img src="./img/20210326_BPM-69.png" alt="" width="140px">
                 </div>
                 <div class="career-desc">
-                    <p>Projektant [Warszawa]</p>
+                    <p>Projektant sieci i instalacji elektrycznych i elektroenergetycznych [Warszawa]</p>
                 </div>
                 <div class="career-btn">
                     <a class="button02 job-btn" target="_blank" href="./pdf/20240711_Ogloszenie_o_prace_Projektant_BPM.pdf">Zobacz ofertę</a>
@@ -121,7 +121,7 @@
                     <img src="./img/20210326_BPM-69.png" alt="" width="140px">
                 </div>
                 <div class="career-desc">
-                    <p>Projektant/Starszy Asystent Projektanta [Warszawa]</p>
+                    <p>Projektant/Starszy Asystent Projektanta sieci elektroenergetycznych NN oraz SN, instalacji i urządzeń elektrycznych [Warszawa]</p>
                 </div>
                 <div class="career-btn">
                     <a class="button02 job-btn" target="_blank" href="./pdf/20240711_Ogloszenie_o_prace_Projektant_Starszy Asystent Projektanta_BPM.pdf">Zobacz ofertę</a>
