--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -110,6 +110,17 @@
                     <img src="./img/20210326_BPM-69.png" alt="" width="140px">
                 </div>
                 <div class="career-desc">
+                    <p>Projektant / Asystent projektanta branży teletechnicznej [Warszawa, Katowice]</p>
+                </div>
+                <div class="career-btn">
+                    <a class="button02 job-btn" target="_blank" href="./pdf/20240718_Ogloszenie_o_prace_Projektant_Asystent_tt_Warszawa_Katowice.pdf">Zobacz ofertę</a>
+                </div>
+            </div>
+            <div class="career_section">
+                <div class="career-img">
+                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="career-desc">
                     <p>Projektant sieci i instalacji elektrycznych i elektroenergetycznych [Warszawa]</p>
                 </div>
                 <div class="career-btn">
@@ -169,17 +180,6 @@
                 </div>
                 <div class="career-btn">
                     <a class="button02 job-btn" target="_blank" href="./pdf/20240301_Ogloszenie_o_prace_Asystent_HVAC_Warszawa.pdf">Zobacz ofertę</a>
-                </div>
-            </div>
-            <div class="career_section">
-                <div class="career-img">
-                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
-                </div>
-                <div class="career-desc">
-                    <p>Projektant / Asystent projektanta branży teletechnicznej [Katowice]</p>
-                </div>
-                <div class="career-btn">
-                    <a class="button02 job-btn" target="_blank" href="./pdf/20231129_Ogloszenie_o_prace_Projektant_asystent_teletechnika_Katowice__PW01.pdf">Zobacz ofertę</a>
                 </div>
             </div>
             <div class="career_section">
