--- a/sieci-i-instalacje-wodnokanalizacyjne.html
+++ b/sieci-i-instalacje-wodnokanalizacyjne.html
@@ -122,6 +122,7 @@
         </div>
         <div class="footerCopyright">
             Copyright © <span class="footerYear"></span> Metroprojekt sp. z o.o.
+            <p class="footer-author">Realizacja: <a class="grey-link" href="https://mgodlewskidev.pl/" target="_blank">mgodlewskidev.pl</a></p>
         </div>
     </footer>
 
